--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
   <body>
       <main>
+        <div class="control_container">
         <div class="controls">
           <div class="control">
             <label for="start_at">Start at</label>
@@ -19,11 +20,14 @@
         </div>
         </div>
       </div>
+    </div>
+    <div class="button_container">
       <button class="count_button">
         <span class="current_count">
           0
         </span>
       </button>
+    </div>
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
